[package]
name = "adventofcode2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
env_logger = "0.10.0"
indexmap = "1.9.2"
itertools = "0.10.5"
log = "0.4.17"
regex = "1.7.0"
substring = "1.4.5"
